<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="audio_will_be_initialized">Audio will be initialized in about 15 seconds, please stop any running video or audio playback before then</string>
    <string name="audio_initialized">Audio initialized</string>
    <string name="action_import_settings">Import Settings</string>
    <string name="action_new_connection">✚ New Connection</string>
    <string name="sort_connections">Sort connections</string>
    <string name="discovery_title">Add Connection</string>
    <string name="discovery_scanning">Searching for servers on local network…</string>
    <string name="discovery_scan_network">Scan network</string>
    <string name="discovery_scanning_progress">Scanning network… (%1$d/%2$d hosts)</string>
    <string name="discovery_scan_complete">Scan complete</string>
    <string name="discovery_item_address">%1$s · port %2$d</string>
    <string name="discovery_none_found">No servers found yet</string>
    <string name="discovery_enter_manually">Enter manually</string>
    <string name="no_connections_title">No connections yet</string>
    <string name="no_connections_hint">Tap the + button to add your first remote connection</string>
    <string name="no_connections_hint_tv">Press the + button above to add your first remote connection</string>
    <string name="action_edit_default_settings">⚙ Edit Default Settings</string>
    <string name="global_default_settings">Global Default Settings</string>
    <string name="global_default_settings_description">App-wide preferences that affect every connection and the app itself, such as display, input, and behavior options.</string>
    <string name="default_connection_settings">Default Connection Settings</string>
    <string name="default_connection_settings_description">The connection template that new connections, and connections launched from .rdp/.vv files, start from. Edit it like a normal connection.</string>
    <string name="section_display">Display</string>
    <string name="section_input">Input</string>
    <string name="section_audio">Audio</string>
    <string name="section_behavior">Behavior</string>
    <string name="section_sound">Sound</string>
    <string name="section_protocol_preferences">Protocol Preferences</string>
    <string name="default_connection_settings_redirect_summary">Input method, scaling, toolbar position and other per-connection defaults moved here. Tap to edit the default connection.</string>
    <string name="reset_default_connection_settings">Reset Defaults</string>
    <string name="reset_default_connection_settings_confirm">Reset the default connection settings back to their initial values?</string>
    <string name="action_export_settings">Export Settings</string>
    <string name="action_delete_connection">Delete Connection</string>
    <string name="action_rate_or_share_app">⭐ Get Help, Rate, Share</string>
    <string name="action_morpheusly">Get Morpheusly</string>
    <string name="morpheusly_cta_title">Reach your computers from anywhere</string>
    <string name="morpheusly_cta_body">Secure remote-desktop access over the Internet with zero network configuration. Install the Morpheusly desktop app on every computer you want to reach, sign in, and see which ones are online and connect seamlessly from the Morpheusly mobile app.</string>
    <string name="morpheusly_cta_download">Get Morpheusly</string>
    <string name="morpheusly_cta_dismiss">Not now</string>
    <string name="get_help">Get Help</string>
    <string name="opaque_app_name" translatable="false">Opaque</string>
    <string name="opaque_app_name_beta" translatable="false">Opaque Beta</string>
    <string name="advanced_settings">Advanced Settings</string>
    <string name="audio">Audio</string>
    <string name="auto_rotation">Screen rotation while connected</string>
    <string name="auto_request_new_res">Sync remote to display resolution</string>
    <string name="custom_ca_subject">Optional Cert Subject. Not needed if cert CN matches hostname</string>
    <string name="custom_ca_import">Alternatively, enter full path to your CA and tap Import</string>
    <string name="custom_ca_paste">Paste (if not importing) the CA here</string>
    <string name="ca_ovirt_use_custom">Custom RHEV/oVirt CA</string>
    <string name="ca_spice_use_ovirt">Use RHEV/oVirt CA for SPICE</string>
    <string name="ca_ovirt_manage">Manage RHEV/oVirt CA</string>
    <string name="ca_spice_manage">Manage SPICE CA</string>
    <string name="ca_file_not_found">File not found. Please enter a valid file name in the text field (e.g. /sdcard/ca.crt).</string>
    <string name="ca_file_error_reading">Error reading CA file. Please ensure it is readable.</string>
    <string name="ca_new_or_changed">New or changed server certificate</string>
    <string name="connection_type_text">Virtualization Environment (RHEV/oVirt or Proxmox)</string>
    <string name="connection_type_ovirt" translatable="false">oVirt/RHEV</string>
    <string name="connection_type_pve" translatable="false">Proxmox VE</string>
    <string name="connection_type_prompt_title">Select server type</string>
    <string-array name="connection_types" translatable="false">
        <item>@string/connection_type_ovirt</item>
        <item>@string/connection_type_pve</item>
    </string-array>
    <string name="connection_setup_vm_name">Virtual machine name (optional)</string>
    <string name="connection_setup_host_name">Server Address</string>
    <string name="connection_setup_user">User@Domain</string>
    <string name="connection_setup_password">Password</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_password_auth_failed">Authentication failed. Please re-enter your credentials.</string>
    <string name="enter_otp_code">Please enter OTP code</string>
    <string name="hide_toolbar">Hide toolbar</string>
    <string name="manage_custom_ca_title">Manage custom CA</string>
    <string name="save_button">Save</string>
    <string name="select_vm_title">Select Virtual Machine</string>
    <string name="vv_file_not_found">The .vv file was not found!</string>
    <string name="vv_file_error">The .vv file is either missing or corrupt!</string>
    <string name="info_cert">Do you accept this new or changed host certificate?\n\nFingerprints:\nMD5: %1$s\nSHA1: %2$s\nSHA256: %3$s\n\nIssued to: %4$s\nIssued by: %5$s\n\nValid from: %6$s\nValid until: %7$s\n</string>
    <string name="toggle_keyboard">Toggle Keyboard</string>
    <string name="show_keyboard">Show Keyboard</string>
    <string name="scroll_wheel">Scroll Wheel</string>
    <string name="input_method_help">Input Method Help</string>
    <string name="ok">OK</string>
    <string name="input_methods">Input Method</string>
    <string name="error_failed_to_download_http">Failed to download file over HTTP. Perhaps your server is unreachable.</string>
    <string name="error_failed_to_download_https">Failed to download file over HTTPS. Perhaps your server cert is untrusted (expired or self-signed) or your server is unreachable.</string>
    <string name="error_failed_to_obtain_content">Failed to obtain file. Please download it again but this time, quickly open it from the Download folder in a File Manager.</string>
    <string name="error_failed_to_obtain_file">Failed to find file. Please download it again, but this time, try to open it from the Notification area or directly from the Browser if possible.</string>
    <string name="error_dialog_title">Error</string>
    <string name="info_dialog_title">Info</string>
    <string name="info_vm_launched_on_stand_by">Your VM was found powered off and has been started. Please try again in a couple of minutes. If you try too soon and get a connection failure, try again later.</string>
    <string name="error_no_vm_found_for_user">No available Virtual Machines for the given user.</string>
    <string name="error_no_such_vm_found_for_user">No Virtual Machine with the ID provided was found for the given user. Erase the ID to get a list of VMs.</string>
    <string name="error_no_vnc_support_yet">VNC display type not supported yet, but it is an upcoming feature. Thanks for your understanding!</string>
    <string name="error_not_connected_to_network">You do not appear to be connected to the Internet. Cannot continue without being connected!</string>
    <string name="error_ovirt_timeout">The connection to your VM timed out. Please check that the address of the node running your VM is correct, that it is accessible from your current network, and that no firewall is blocking the connection.</string>
    <string name="auto_x_cancel">Cancel</string>
    <string name="auto_x_confirm">Confirm</string>
    <string name="center_mouse">Mouse @</string>
    <string name="color_mode">Color Mode</string>
    <string name="ctrl_alt_del">Ctrl-Alt-Del</string>
    <string name="default_input_mode">Default Input Mode</string>
    <string name="disconnect">Disconnect</string>
    <string name="enter_text">Send Text</string>
    <string name="extra_keys_disable">Disable Extra Keys</string>
    <string name="fit_to_screen">Fit to Screen</string>
    <string name="immersive_mode_disable">Disable Immersive Mode</string>
    <string name="import_export_settings">📦 Import/Export Settings</string>
    <string name="info">Info</string>
    <string name="input_mode">Input Mode</string>
    <string name="input_method_direct_swipe_pan">Direct, Swipe Pan</string>
    <string name="input_method_direct_drag_pan">Direct, Hold Pan</string>
    <string name="input_method_single_handed">Single Handed</string>
    <string name="input_method_touchpad">Simulated Touchpad</string>
    <string name="input_mode_help">Input Mode Help</string>
    <string name="keep_screen_awake_enable">Keep Screen Awake</string>
    <string name="landscape_force">Force Landscape Orientation</string>
    <string name="left_handed_mode">Left-Handed Mode</string>
    <string name="disable_pointer_offset_correction">Disable pointer offset correction</string>
    <string name="main_screen_help">Connection Help</string>
    <string name="master_password_enable">🔒 Enable Master Password</string>
    <string name="master_password_hint_once">Enter Password</string>
    <string name="master_password_hint_twice">Repeat Password</string>
    <string name="one_to_one">One to One</string>
    <string name="local_clipboard_integration">Enable Local to Remote Clipboard Integration</string>
    <string name="remote_clipboard_integration">Enable Remote to Local Clipboard Integration</string>
    <string name="applies_to_new_connections_only">Applies to New Connections Only</string>
    <string name="save_as_copy">Save as Copy</string>
    <string name="scaling">Scaling</string>
    <string name="scaling_zoomable">Zoomable</string>
    <string name="send_key_again">Send Key Again</string>
    <string name="special_keys">Send Keys</string>
    <string name="copy_logcat">📋 Copy Logcat</string>
    <string name="help">Help ⓘ</string>
    <string name="need_help">Need some help?</string>
    <string name="support_forum">Support Forum ❓</string>
    <string name="email_us">Email Us 📧</string>
    <string name="report_bug">Report a Bug 🐛</string>
    <string name="more_debug_logging">More Debug Logging</string>
    <string name="hide_connection_thumbnails">Hide Connection Thumbnails</string>
    <string name="show_only_connection_nicknames">Show Only Connection Nicknames</string>
    <string name="love_our_work">Love our work?</string>
    <string name="rate_app">Rate ⭐⭐⭐⭐⭐</string>
    <string name="share_app">Share 🔗</string>
    <string name="donate_app">Donate ❤</string>
    <string name="more_apps">More Apps 📱</string>
    <string name="previous_versions">Previous Versions ⍼</string>
    <string name="keyboard_type">Software Keyboard Type</string>
    <string name="scroll_speed">Touch Scroll Speed</string>
</resources>