<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    android:paddingRight="26dip"
    >
    <EditTextPreference
        android:key="preferenceSpacerTop" />
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="disableImmersive"
        android:title="@string/immersive_mode_disable" />
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="keepScreenOn"
        android:title="@string/keep_screen_awake_enable" />
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="forceLandscape"
        android:title="@string/landscape_force" />
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="leftHandedModeTag"
        android:title="@string/left_handed_mode" />
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="moreDebugLoggingTag"
        android:title="@string/more_debug_logging" />
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="doNotShowDesktopThumbnails"
        android:title="@string/hide_connection_thumbnails" />
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="showOnlyConnectionNicknames"
        android:title="@string/show_only_connection_nicknames" />
    <ListPreference
        android:defaultValue="@string/pref_keyboard_type_TYPE_NULL_value"
        android:entries="@array/pref_keyboard_type_option_labels"
        android:entryValues="@array/pref_keyboard_type_option_values"
        android:key="softwareKeyboardType"
        android:title="@string/keyboard_type" />
    <SeekBarPreference
        android:defaultValue="6"
        android:key="scrollSpeed"
        android:max="9"
        android:title="@string/scroll_speed" />
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="disablePointerOffsetCalculation"
        android:title="@string/disable_pointer_offset_correction" />
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="localToRemoteClipboardIntegration"
        android:title="@string/local_clipboard_integration" />
    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="remoteToLocalClipboardIntegration"
        android:title="@string/remote_clipboard_integration" />
    <PreferenceCategory android:title="@string/applies_to_new_connections_only">
        <Preference
            android:key="openDefaultConnectionSettings"
            android:title="@string/default_connection_settings"
            android:summary="@string/default_connection_settings_redirect_summary" />
    </PreferenceCategory>
</PreferenceScreen>
