<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/moveToolbar"
        app:actionViewClass="android.widget.ImageButton"
        app:showAsAction="always" />

    <item
        android:id="@+id/extraKeysToggle"
        android:icon="@drawable/showkeys"
        android:onClick="extraKeysToggle"
        android:padding="0dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/actionShowKeyboard"
        android:icon="@drawable/ic_keyboard_gray_48dp"
        android:onClick="toggleKeyboard"
        android:padding="0dp"
        app:showAsAction="always" />

    <item
        android:id="@+id/itemExtraKeys"
        android:icon="@drawable/extra_keys"
        android:title="@string/extra_keys_disable" />
    <item
        android:id="@+id/itemInputMode"
        android:alphabeticShortcut="p"
        android:icon="@android:drawable/ic_input_get"
        android:numericShortcut="5"
        android:title="@string/input_mode">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/itemInputTouchPanZoomMouse"
                    android:title="@string/input_method_direct_swipe_pan" />
                <item
                    android:id="@+id/itemInputDragPanZoomMouse"
                    android:title="@string/input_method_direct_drag_pan" />
                <item
                    android:id="@+id/itemInputTouchpad"
                    android:title="@string/input_method_touchpad" />
                <item
                    android:id="@+id/itemInputSingleHanded"
                    android:title="@string/input_method_single_handed" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/itemScaling"
        android:alphabeticShortcut="z"
        android:icon="@android:drawable/ic_menu_zoom"
        android:numericShortcut="4"
        android:title="@string/scaling">
        <menu>
            <group
                android:id="@+id/groupScaling"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/itemZoomable"
                    android:title="@string/scaling_zoomable" />
                <item
                    android:id="@+id/itemFitToScreen"
                    android:checked="true"
                    android:title="@string/fit_to_screen" />
                <item
                    android:id="@+id/itemOneToOne"
                    android:title="@string/one_to_one" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/itemDisconnect"
        android:alphabeticShortcut="x"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:numericShortcut="7"
        android:title="@string/disconnect"></item>
    <item
        android:id="@+id/itemSpecialKeys"
        android:alphabeticShortcut="k"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:numericShortcut="1"
        android:title="@string/special_keys" />
    <item
        android:id="@+id/itemSendKeyAgain"
        android:alphabeticShortcut="g"
        android:title="@string/send_key_again" />
    <item
        android:id="@+id/itemCtrlAltDel"
        android:alphabeticShortcut="r"
        android:icon="@android:drawable/ic_menu_share"
        android:numericShortcut="8"
        android:title="@string/ctrl_alt_del" />
    <item
        android:id="@+id/itemEnterText"
        android:alphabeticShortcut="e"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/enter_text" />
    <!-- <group android:checkableBehavior="all">
        <item android:numericShortcut="6" android:alphabeticShortcut="f" android:id="@+id/itemFollowMouse" android:title="@string/pan_follow_mouse"/>
        <item android:title="@string/mouse_follow_pan" android:id="@+id/itemFollowPan"/>
    </group> -->
    <item
        android:id="@+id/itemColorMode"
        android:alphabeticShortcut="c"
        android:icon="@android:drawable/ic_menu_preferences"
        android:numericShortcut="3"
        android:title="@string/color_mode"></item>
    <item
        android:id="@+id/itemCenterMouse"
        android:alphabeticShortcut="m"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:numericShortcut="2"
        android:title="@string/center_mouse" />
    <item
        android:id="@+id/itemInfo"
        android:alphabeticShortcut="i"
        android:icon="@android:drawable/ic_menu_info_details"
        android:numericShortcut="9"
        android:title="@string/info"></item>
    <item
        android:id="@+id/itemHelpInputMode"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/input_mode_help" />
    <!-- <item android:id="@+id/itemOpenDoc" android:title="@string/open_doc" android:icon="@android:drawable/ic_menu_help"/> -->
</menu>
