<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical"
        android:padding="5dip">

        <TableRow android:gravity="center">

            <TextView
                android:text="@string/need_help"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>


        <TableRow android:gravity="center">

            <Button
                android:id="@+id/buttonHelp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:onClick="showMainScreenHelp"
                android:text="@string/help"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow android:gravity="center">

            <Button
                android:id="@+id/buttonSupportForum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:onClick="showSupportForum"
                android:text="@string/support_forum"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow android:gravity="center">

            <Button
                android:id="@+id/emailButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:onClick="emailUs"
                android:text="@string/email_us"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow android:gravity="center">

            <Button
                android:id="@+id/buttonReportBug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:onClick="reportBug"
                android:text="@string/report_bug"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow android:gravity="center">

            <Button
                android:id="@+id/buttonPreviousVersions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:onClick="previousVersions"
                android:text="@string/previous_versions"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow android:gravity="center">

            <TextView
                android:text="@string/love_our_work"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>


        <TableRow android:gravity="center">

            <Button
                android:id="@+id/buttonRateApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:onClick="rateApp"
                android:text="@string/rate_app"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow android:gravity="center">

            <Button
                android:id="@+id/buttonShareApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:onClick="shareApp"
                android:text="@string/share_app"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow android:gravity="center">

            <Button
                android:id="@+id/buttonDonate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:onClick="donateToProject"
                android:text="@string/donate_app"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow android:gravity="center">

            <Button
                android:id="@+id/buttonOtherApps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:onClick="moreApps"
                android:text="@string/more_apps"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </TableRow>

        <TableRow android:gravity="center" />

        <TableRow android:gravity="center">

            <TextView
                android:id="@+id/versionAndCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>
    </TableLayout>
</ScrollView>