<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textAppearance="?android:attr/textAppearanceMedium">
    </TextView>
    <TextView
        android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >
    </TextView>
    <EditText
        android:id="@+id/textBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/master_password_hint_once"
        android:inputType="textNoSuggestions|textVisiblePassword">
        <requestFocus />
    </EditText>
    <EditText
        android:id="@+id/textBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/master_password_hint_twice"
        android:inputType="textNoSuggestions|textVisiblePassword">
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonCancel"
            android:text="@string/auto_x_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>
        <Button
            android:id="@+id/buttonConfirm"
            android:text="@string/auto_x_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>
    </LinearLayout>
</LinearLayout>