<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <item android:numericShortcut="1"
        android:alphabeticShortcut="s"
        android:id="@+id/itemSave"
        android:icon="@android:drawable/ic_menu_save"
        tools:ignore="AppCompatResource"
        android:showAsAction="always"
        app:showAsAction="always"
        android:title="@string/save_button"
        android:onClick="save"/>

    <item android:numericShortcut="2"
        android:alphabeticShortcut="c"
        android:id="@+id/itemSaveAsCopy"
        android:icon="@android:drawable/ic_menu_save"
        tools:ignore="AppCompatResource"
        android:showAsAction="never"
        app:showAsAction="never"
        android:title="@string/save_as_copy"
        android:onClick="saveAsCopy"/>

    <item  android:numericShortcut="3"
        android:alphabeticShortcut="h"
        android:id="@+id/actionHelp"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/help"
        tools:ignore="AppCompatResource"
        android:showAsAction="always"
        app:showAsAction="always"
        android:onClick="showConnectionScreenHelp" />
</menu>
